# advent_of_code

./: .gitignore  AdventUtils.hi  AdventUtils.hs  Cargo.toml
2017/: README.md
2019/day_01/: Cargo.toml
2019/day_02/: Cargo.toml
2019/day_03/: Cargo.toml
2019/day_04/: Cargo.toml
2019/day_05/: Cargo.toml
2019/day_07/: Cargo.toml
2019/day_08/: Cargo.toml
2019/day_09/: Cargo.toml
2019/day_12/: Cargo.toml
2019/day_13/: Cargo.toml
2019/day_14/: Cargo.toml
2019/day_16/: Cargo.toml
2019/day_18/: Cargo.toml
2019/day_19/: Cargo.toml
2019/day_20/: Cargo.toml
2019/day_21/: Cargo.toml
2019/day_22/: Cargo.toml
2019/day_24/: Cargo.toml
2021/day02/: Cargo.toml
2021/day03/: Makefile  golf.py
2021/day04/: Cargo.toml  golf.py
2021/day08/: Cargo.toml
2021/day09/: Cargo.toml
2021/day11/: Cargo.toml
2021/day12/: Cargo.toml
2021/day13/: Cargo.toml
2021/day16/: Cargo.toml
2021/day18/: Cargo.toml
2021/day19/: Cargo.toml
2022/: Makefile
2023/: Makefile  solution.py.template
day01/: Cargo.toml  Makefile  excel_solution.ods
day02/: Makefile  excel_solution.ods  golf.py
day03/: Cargo.toml  count.txt  input_data.txt
day04/: input_data.txt
day05/: Cargo.toml  input_data.txt
day06/: Cargo.toml  golf.py
day07/: input_data.txt
day08/: input_data.txt
day09/: input_data.txt
day10/: Cargo.toml
day14/: Cargo.toml
day15/: Cargo.toml
day20/: Cargo.toml
day23/: Cargo.toml
day_06/: Cargo.toml
day_10/: Cargo.toml
day_11/: Cargo.toml
day_15/: Cargo.toml
day_17/: Cargo.toml
day_23/: Cargo.toml
day_25/: Cargo.toml
(+402 files in other folders)
